# gpui-assets

./: AGENTS.md  Cargo.toml  README.md
assets/: README.md
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/lucide/: Cargo.toml  README.md
crates/lucide/src/: assets.rs  icons.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mdi/: Cargo.toml  README.md
crates/mdi/src/: assets.rs  icons.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
examples/example-assets/: Cargo.toml  README.md
examples/example-assets/src/: main.rs
examples/example-custom-prefix/: Cargo.toml  README.md
examples/example-custom-prefix/src/: assets.rs  icons.rs  main.rs
examples/example-gallery/: Cargo.toml  README.md
examples/example-gallery/src/: gallery.rs  icons.rs  main.rs  search_syntax_popover.rs
examples/example-gallery/src/gallery/: about.rs  info_panel.rs  util.rs
