[workspace]
resolver = "2"
members = [
    "crates/assets",
    "crates/macros",
    "crates/utils",
    "crates/lucide",
    "crates/mdi",
    "examples/example-assets",
    "examples/example-gallery",
    "examples/example-custom-prefix",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Dmitry Filippov <filippov.dmitry@gmail.com>"]
description = "It provides a modular asset-management layer, an embedded Lucide icon set, and reusable UI examples."
keywords = ["gpui", "assets", "icons", "lucide", "mdi"]
license = "MIT or Apache-2.0"
repository = "https://github.com/filippovd/gpui-assets"
readme = "README.md"
publish = false

[workspace.dependencies]
#
# Workspace member crates
#
gpui-assets = { path = "crates/assets", version = "0.1.0" }
gpui-assets-macros = { path = "crates/macros", version = "0.1.0" }
gpui-lucide = { path = "crates/lucide", version = "0.1.0" }
gpui-mdi = { path = "crates/mdi", version = "0.1.0" }
gpui-assets-utils = { path = "crates/utils", version = "0.1.0" }

#
# External crates
#
gpui = { git = "https://github.com/zed-industries/zed", version = "0.2.2" }
gpui_platform = { git = "https://github.com/zed-industries/zed", version = "0.1.0", features = ["font-kit", "wayland", "x11"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", version = "0.5.1" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", version = "0.5.1" }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
nucleo-matcher = "0.3.1"
anyhow = "1"
tempfile = "3"
proc-macro2 = "1"
quote = "1"
syn = "2"
