[package]
name = "gpui-assets"
edition.workspace = true
version = "0.1.0"
authors.workspace = true
description = "It provides a modular asset-management layer, an embedded Lucide icon set, and reusable UI examples."
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = [
    "gpui",
    "assets",
    "lucide",
    "mdi",
]
publish = true

[dependencies]
gpui = { workspace = true }
