[package]
name = "gpui-lucide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui-assets = { workspace = true }
gpui-assets-macros = { workspace = true }

gpui = { workspace = true }
gpui-component = { workspace = true }
rust-embed = { workspace = true }
