[package]
name = "example-assets"
edition.workspace = true
version.workspace = true
authors.workspace = true
description = "Example assets for gpui-assets"
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui-assets = { workspace = true }
gpui-lucide = { workspace = true }
gpui-mdi = { workspace = true }

gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
