[package]
name = "example-gallery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui-assets = { workspace = true }
gpui-lucide = { workspace = true }
gpui-mdi = { workspace = true }
gpui-assets-utils = { workspace = true }

gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
nucleo-matcher = { workspace = true }
