[package]
name = "example-gallery"
version.workspace = true
authors.workspace = true
description = "A gallery of gpui assets examples"
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
edition.workspace = true

[dependencies]
gpui-assets = { workspace = true }
gpui-lucide = { workspace = true }
gpui-mdi = { workspace = true }
gpui-assets-utils = { workspace = true }

gpui = { workspace = true }
gpui_platform = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
nucleo-matcher = { workspace = true }
